# jsbridge

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sanyinchen/jsbridge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sanyinchen/jsbridge/: MainActivity.kt
app/src/main/java/com/sanyinchen/jsbridge/module/: BusinessPackages.java  LogModule.java
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
js-bridge/: index.js  package-lock.json  webpack.config.js
js-bridge-lib/: build.gradle
js-bridge-lib/src/androidTest/java/com/sanyinchen/jsbridge/: ExampleInstrumentedTest.kt
js-bridge-lib/src/main/assets/: js-bridge-bundle.js
js-bridge-lib/src/main/cpp/: CMakeLists.txt
js-bridge-lib/src/main/cpp/boost/: CMakeLists.txt
js-bridge-lib/src/main/cpp/boost/boost_1_63_0/boost/mpl/aux_/: test.hpp
js-bridge-lib/src/main/cpp/bridge/: CMakeLists.txt  CxxNativeModule.cpp  Instance.cpp  JMessageQueueThread.cpp  JSExecutor.cpp  JSLoader.cpp  JSLogging.cpp  JavaModuleWrapper.cpp  JniJSModulesUnbundle.cpp  JsBridgeInstanceImpl.cpp  MethodInvoker.cpp  ModuleRegistry.cpp  ModuleRegistryBuilder.cpp  NativeArray.cpp  NativeCommon.cpp  NativeMap.cpp  NativeToJsBridge.cpp  OnLoad.cpp  ProxyExecutor.cpp  ReadableNativeArray.cpp  ReadableNativeMap.cpp  WritableNativeArray.cpp  WritableNativeMap.cpp
js-bridge-lib/src/main/cpp/bridge/include/: CxxModuleWrapper.h  CxxModuleWrapperBase.h  CxxNativeModule.h  Instance.h  JCallback.h  JMessageQueueThread.h  JNativeRunnable.h  JSExecutor.h  JSIndexedRAMBundle.h  JSLoader.h  JavaModuleWrapper.h  JavaScriptExecutorHolder.h  JniJSModulesUnbundle.h  JsArgumentHelpers.h  JsBridgeInstanceImpl.h  MethodInvoker.h  ModuleRegistry.h  ModuleRegistryBuilder.h  NativeArray.h  NativeCommon.h  NativeMap.h  NativeToJsBridge.h  OnLoad.h  ProxyExecutor.h  ProxyJavaScriptExecutorHolder.h  RAMBundleRegistry.h  ReadableNativeArray.h  ReadableNativeMap.h  WritableNativeArray.h  WritableNativeMap.h
js-bridge-lib/src/main/cpp/cxxmodule/: CMakeLists.txt  HelloCxxModule.cpp  HelloCxxModule.h
js-bridge-lib/src/main/cpp/double-conversion/: CMakeLists.txt
js-bridge-lib/src/main/cpp/fbgloginit/: CMakeLists.txt
js-bridge-lib/src/main/cpp/fbjni/: Assert.cpp  CMakeLists.txt  Log.cpp  fbjni.h
js-bridge-lib/src/main/cpp/fbjni/detail/: Assert.h  Exceptions.cpp  Exceptions.h  Hybrid.h  Log.h  Registration-inl.h
js-bridge-lib/src/main/cpp/folly/folly/: CMakeLists.txt
js-bridge-lib/src/main/cpp/glog/glog/: CMakeLists.txt
js-bridge-lib/src/main/cpp/jsc/: CMakeLists.txt
js-bridge-lib/src/main/cpp/jscexecutor/: CMakeLists.txt  JSExecutor.cpp  JSLogging.cpp  OnLoad.cpp
js-bridge-lib/src/main/cpp/jscexecutor/include/: JSExecutor.h  JavaScriptExecutorHolder.h
js-bridge-lib/src/main/cpp/jscexecutor/jsi/jsi/: JSCRuntime.cpp  JSIDynamic.cpp  JSIDynamic.h  instrumentation.h  jsi.cpp  jsi.h
js-bridge-lib/src/main/cpp/jscexecutor/jsi/jsiexecutor/: JSIExecutor.cpp  JSIExecutor.h  JSINativeModules.cpp  JSINativeModules.h
js-bridge-lib/src/main/java/com/facebook/jni/: HybridData.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/: JsBridgeContext.java  JsBridgeInstance.java  JsBridgeInstanceImpl.java  JsBridgeManager.java  JsBridgeManagerBuilder.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/annotation/: ReactMethod.java  ReactModule.java  ReactModuleList.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/base/: Callback.java  CallbackImpl.java  JSInstance.java  JsBridgeInstance.java  Promise.java  PromiseImpl.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/business/: BusinessPackages.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/config/: ReactBuildConfig.java  ReactConstants.java  ReactFeatureFlags.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/context/: JavaScriptContextHolder.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/data/: Arguments.java  Dynamic.java  DynamicFromArray.java  DynamicFromMap.java  MapBuilder.java  NativeArray.java  NativeArrayInterface.java  NativeMap.java  ReadableArray.java  ReadableMap.java  ReadableMapKeySetIterator.java  ReadableNativeArray.java  ReadableNativeMap.java  ReadableType.java  WritableArray.java  WritableMap.java  WritableNativeArray.java  WritableNativeMap.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/datastructure/: WritableArray.java  WritableNativeArray.java  WritableNativeMap.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/exception/: CppException.java  InvalidIteratorException.java  JSApplicationCausedNativeException.java  JSException.java  NativeArgumentsParseException.java  NoSuchKeyException.java  ObjectAlreadyConsumedException.java  UnexpectedNativeTypeException.java  UnknownCppException.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/executor/: ProxyJavaScriptExecutor.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/lifecycle/: ActivityEventListener.java  LifecycleEventListener.java  LifecycleState.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/load/: JSBundleLoader.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/memory/: MemoryPressure.java  MemoryPressureListener.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/message/: CxxCallbackImpl.java  CxxModuleWrapper.java  CxxModuleWrapperBase.java
js-bridge-lib/src/main/java/com/sanyinchen/jsbridge/modules/: JsBridgePackage.java
js-bridge/bridge/: Bridge.js  MessageQueue.js  NativeModules.js
js-bridge/utilities/: Platform.js
jsbridge/: build.gradle
jsbridge/src/main/cpp/: CMakeLists.txt
jsbridge/src/main/java/com/facebook/jni/: HybridData.java
jsbridge/src/test/java/com/sanyinchen/jsbridge/: ExampleUnitTest.kt
(+62 files in other folders)
